--- a/STM_GameBoy.ioc
+++ b/STM_GameBoy.ioc
@@ -32,7 +32,8 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI2
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=TIM4
+Mcu.IPNb=7
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -46,6 +47,7 @@ Mcu.Pin15=PA13
 Mcu.Pin16=PA14
 Mcu.Pin17=PB3
 Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
@@ -54,7 +56,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -72,6 +74,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=JOYSTICK_BUTTON
@@ -173,9 +176,9 @@ ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init
 RCC.ADCFreqValue=4000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV8
 RCC.AHBFreq_Value=32000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=32000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=16000000
 RCC.APB2Freq_Value=32000000
 RCC.APB2TimFreq_Value=32000000
 RCC.FCLKCortexFreq_Value=32000000
@@ -200,13 +203,19 @@ SH.ADCx_IN4.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=4.0 MBits/s
+SPI2.CalculateBaudRate=2.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM4.IPParameters=ClockDivision,Prescaler,Period
+TIM4.Period=100
+TIM4.Prescaler=7999
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-F103RB
 boardIOC=true
 isbadioc=false
