--- a/STM_GameBoy.ioc
+++ b/STM_GameBoy.ioc
@@ -38,14 +38,14 @@ Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA1
-Mcu.Pin11=PA3
-Mcu.Pin12=PA4
-Mcu.Pin13=PB13
-Mcu.Pin14=PB15
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
+Mcu.Pin12=PB13
+Mcu.Pin13=PB15
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB7
 Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
@@ -55,7 +55,7 @@ Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
-Mcu.Pin9=PA0-WKUP
+Mcu.Pin9=PA1
 Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -76,11 +76,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA0-WKUP.GPIO_Label=JOYSTICK_BUTTON
-PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
-PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Input
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=JOYSTICK_X
 PA1.Locked=true
@@ -111,6 +106,11 @@ PB15.Mode=TX_Only_Simplex_Unidirect_Master
 PB15.Signal=SPI2_MOSI
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
+PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB7.GPIO_Label=JOYSTICK_BUTTON
+PB7.GPIO_PuPd=GPIO_PULLUP
+PB7.Locked=true
+PB7.Signal=GPIO_Input
 PC0.GPIOParameters=PinState,GPIO_Label
 PC0.GPIO_Label=LCD_BL
 PC0.Locked=true
@@ -172,7 +172,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV8
 RCC.AHBFreq_Value=32000000
@@ -210,7 +210,7 @@ SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV4
 TIM4.IPParameters=ClockDivision,Prescaler,Period
-TIM4.Period=100
+TIM4.Period=50
 TIM4.Prescaler=7999
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
